objects/Book3__c.object
<CustomObject>
    <fields>
        <fullName>BookDesc__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>BookDesc2__c</fullName>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>BookDesc3__c</fullName>
		<formula>Primary_Book__r.Book_Owner_Team_Member__r.Employee_First_Name__c &amp;&quot; &quot;&amp; Primary_Book__r.Book_Owner_Team_Member__r.Team_Member_Last_Name__c 
 &amp;&quot; | &#55357;&#56542; &quot;&amp;
Primary_Book__r.Book_Owner_Team_Member__r.Phone__c 
&amp;
IF(ISBLANK(Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c),
NULL,
&quot; | &quot;&amp;
HYPERLINK(&quot;mailto:&quot;&amp; Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c, Primary_Book__r.Book_Owner_Team_Member__r.Email_Address__c, &quot;_self&quot;)
)</formula>
        <label>BookDesc</label>
        <type>TextArea</type>
    </fields>
	<fields>
        <fullName>CompletedDate__c</fullName>
        <description> Save the date when milestone  </description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>CompletedDate6__c</fullName>
        <description> Save the date when milestone  </description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <label>Book2</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>